--- a/_layouts/slides.html
+++ b/_layouts/slides.html
@@ -23,7 +23,7 @@
     <script src="https://remarkjs.com/downloads/remark-latest.min.js">
     </script>
     <script>
-      var slideshow = remark.create({navigation: {scroll: false,}});
+      var slideshow = remark.create();
     </script>
   </body>
 </html>
